--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "dependencies": {
     "apollo-datasource-rest": "^3.3.0",
     "apollo-server": "^3.4.0",
-    "graphql": "^15.6.1"
+    "graphql": "^15.6.1",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.10.5",
     "nodemon": "^2.0.13",
-    "rimraf": "^3.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
