--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Simple GraphQL wrapper for themoviedb API",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && npm run tsc",
+    "tsc": "tsc",
     "start": "npm run build && node build/index.js",
     "start:dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
